# knowledge-base

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  astro.config.mjs  brainstorm.md  docusaurus.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  sidebars.js
.github/workflows/: content-agent.yml  deploy.yml  test.yml
content/: _meta.yaml
content/ai/: _meta.yaml
content/blockchain/: _meta.yaml
content/protocol/: _meta.yaml
scripts/: agent.py  config.py  config.yaml
scripts/adapters/: __init__.py  anthropic.py  base.py  factory.py  openai.py
scripts/discovery/: __init__.py  arxiv.py  base.py  github.py
scripts/generation/: __init__.py  content_generator.py  prompts.py
scripts/github_ops/: __init__.py  content_ops.py  pr_manager.py
scripts/utils/: __init__.py  deduplication.py  logger.py  rate_limiter.py
specs/01_knowledge_base_system/: .build-e2e-state.json  brainstorm.md  product_spec.md  technical_spec.md
src/content/: config.ts
src/css/: custom.css
src/layouts/: Layout.astro
src/pages/: index.astro  index.tsx
src/pages/[domain]/: [...slug].astro
src/pages/ai/: [...slug].astro  index.astro
src/pages/blockchain/: [...slug].astro  index.astro
src/pages/protocol/: [...slug].astro  index.astro
tests/: conftest.py
tests/test_adapters/: test_factory.py
tests/test_generation/: test_content_generator.py
tests/test_utils/: test_deduplication.py
